# mayday-website

./: .env.sample  .gitignore  .uvignore  Dockerfile  README.md  TRAEFIK_SETUP.md  app.py  docker-compose.yml  pyproject.toml  traefik-env.sample
data/: config.yml  traefik.yml
logs/: pre_tool_use.json
mayday/: __init__.py  business_api.py  helpers.py  housecallpro.py  logger.py  mail.py  recaptcha.py  routes.py
mayday/data/: data_layer.py  default_config.py  schema.json  schema.sql
mayday/gcloud_helpers/: get_oauth_token.py  test_bapi.py
static/css/: index.css
static/js/: blog.js  index.js
templates/: about.htm  admin_login.htm  blog.htm  email.htm  index.htm
