[project]
name = "maydayplumbing"
version = "0.1.0"
description = "Website for MayDay Plumbing LLC"
authors = [
    {name = "Tyler Hartman", email = "tyhartma@cisco.com"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "aiohttp",
    "jinja2 >= 3.1.4",
    "aiohttp-jinja2 >= 1.6",
    "aiopg >= 1.4.0", 
    "pypandoc >= 1.14",
    "requests >= 2.32.3",
    "playwright == 1.27.1",
    "pytz >= 2024.2",
    "beautifulsoup4 >= 4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mayday"]